--- a/FinanceiroWeb/WebContent/index.html
+++ b/FinanceiroWeb/WebContent/index.html
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<META HTTP-EQUIV="Refresh" CONTENT="0;URL=publico/login.jsf">
+
+<!-- <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
@@ -15,4 +17,4 @@
 		</h:commandLink>
 	</h:form>
 </h:body>
-</html>
+</html> -->
